--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,9 @@ HOST=0.0.0.0
 NODE_ENV=development
 APP_KEY=FcXn7VCz5EuO0kQPw9ol7jirsFd9YiGU
 DRIVE_DISK=local
+DB_CONNECTION=mysql
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
+MYSQL_USER=lucid
+MYSQL_PASSWORD=
+MYSQL_DB_NAME=lucid
