--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
   },
   "dependencies": {
     "@adonisjs/core": "^5.8.0",
+    "@adonisjs/i18n": "^1.5.6",
+    "@adonisjs/lucid": "^18.1.0",
     "@adonisjs/repl": "^3.1.0",
+    "luxon": "^3.0.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21"
