--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,9 @@
     "types": [
       "@adonisjs/core",
       "@adonisjs/repl",
-      "@japa/preset-adonis/build/adonis-typings"
+      "@japa/preset-adonis/build/adonis-typings",
+      "@adonisjs/lucid",
+      "@adonisjs/i18n"
     ]
   }
 }
