--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "node ace serve --watch",
     "build": "node ace build --production",
-    "start": "node server.js"
+    "start": "node server.js",
+    "migrate:dev": "node ace migration:run",
+    "migrate:rest": "node ace migration:fresh"
   },
   "devDependencies": {
     "@adonisjs/assembler": "^5.8.1",
@@ -18,15 +20,20 @@
     "youch-terminal": "^2.1.4"
   },
   "dependencies": {
+    "@adonisjs/auth": "^8.2.1",
     "@adonisjs/core": "^5.8.0",
     "@adonisjs/i18n": "^1.5.6",
     "@adonisjs/lucid": "^18.1.0",
     "@adonisjs/repl": "^3.1.0",
+    "adonis5-jwt": "^1.1.7",
     "luxon": "^3.0.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
+    "phc-argon2": "^1.1.3",
+    "phc-bcrypt": "^1.0.7",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "uuid": "^8.3.2"
   }
 }
