--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,9 @@
       "@adonisjs/repl",
       "@japa/preset-adonis/build/adonis-typings",
       "@adonisjs/lucid",
-      "@adonisjs/i18n"
+      "@adonisjs/i18n",
+      "@adonisjs/auth",
+      "adonis5-jwt"
     ]
   }
 }
