--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
   },
   "dependencies": {
     "@adonisjs/auth": "^8.2.1",
+    "@adonisjs/bouncer": "^2.3.0",
     "@adonisjs/core": "^5.8.0",
     "@adonisjs/i18n": "^1.5.6",
     "@adonisjs/lucid": "^18.1.0",
+    "@adonisjs/lucid-slugify": "^2.2.0",
+    "@adonisjs/mail": "^8.1.2",
     "@adonisjs/repl": "^3.1.0",
+    "@adonisjs/shield": "^7.0.11",
     "adonis5-jwt": "^1.1.7",
     "luxon": "^3.0.1",
     "mysql": "^2.18.1",
