--- a/.adonisrc.json
+++ b/.adonisrc.json
@@ -23,7 +23,8 @@
     "@adonisjs/lucid",
     "@adonisjs/i18n",
     "@adonisjs/auth",
-    "adonis5-jwt"
+    "adonis5-jwt",
+    "@adonisjs/lucid-slugify"
   ],
   "aceProviders": [
     "@adonisjs/repl"
