--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "phc-bcrypt": "^1.0.7",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
+    "slug": "^5.3.0",
     "source-map-support": "^0.5.21",
     "uuid": "^8.3.2"
   }
