modify category endpoint

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,9 @@
       ],
       "Database/*": [
         "./database/*"
+      ],
+      "Utils":[
+        "./utils/*"
       ]
     },
     "types": [
